@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.808 2003/03/07 06:06:32 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.809 2003/03/07 10:35:53 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-03-07 12:30 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/file.c
+  * source/rtl/filesys.c
+  * source/rtl/set.c
+    ! I put back the case for file operations under UNIX, but set the
+      default for unix systems to "MIXED" case and "/" file separator.
+  
 2003-03-07 13:30 UTC+0300 Phil Krylov <phil@mail.ru>
   * source/rtl/binnum.c
     ! Use little-endian values on all platforms in BIN2L()
